--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -113,80 +113,141 @@
             <small> ${group}</small>
         </h3>
     </#if>
-    <br/>
+	<#if walkertype != "">
+		<h3>Traversal
+			<small>${walkertype}</small>
+		</h3>
+	</#if>
+	<#if walkertype != "">
+		<h3>PartitionBy
+			<small>${partitiontype}</small>
+		</h3>
+	</#if>
+	<#if annotinfo != "" >
+		<h3>Annotation type
+			<small>${annotinfo}</small>
+		</h3>
+	</#if>
 
+	<hr>
     <h2>Introduction</h2>
     ${description}
+    
+	<#-- Create references to additional capabilities if appropriate -->
+		<#if readfilters?size != 0 || parallel?size != 0>
+			<hr>
+			<h2>Additional Information</h2>
+			<p></p>
+		</#if>
+		<#if readfilters?size != 0>
+			<h3>Read filters</h3>
+			<#if readfilters?size = 1>
+				<p>This Read Filter is automatically applied to the data by the Engine before processing by ${name}.</p>
+			</#if>
+			<#if (readfilters?size > 1) >
+				<p>These Read Filters are automatically applied to the data by the Engine before processing by ${name}.</p>
+			</#if>
+			<ul>
+				<#list readfilters as filter>
+					<li><a href="${filter.filename}">${filter.name}</a></li>	
+				</#list>
+			</ul>
+		</#if>
+		<#if parallel?size != 0>
+			<h3>Parallelism options</h3>
+			<#if parallel?size == 1>
+				<p>This tool can be run in multi-threaded mode using this option.</p>
+			</#if>
+			<#if (parallel?size > 1)>
+				<p>This tool can be run in multi-threaded mode using these options.</p>
+			</#if>
+			<ul>
+				<#list parallel as option>
+					<li><a href="${option.link}">${option.name} (${option.arg})</a></li>
+				</#list>
+			</ul>
+		</#if>
+		<#if downsampling?size != 0>
+			<h3>Downsampling settings</h3>
+			<p>This tool overrides the engine's default downsampling settings.</p>
+			<ul>
+				<li>Mode: <b>${downsampling.by}</b></li>
+				<li>To coverage: <b>${downsampling.to_cov}</b></li>
+			</ul>
+		</#if>
+		<#if refwindow?size != 0>
+			<h3>Window size</h3>
+			<p>This tool uses a sliding window on the reference.</p>
+			<ul>
+				<li>Window start: <b>${refwindow.start}</b> bp before the locus</li>
+				<li>Window stop: <b>${refwindow.stop}</b> bp after the locus</li>
+			</ul> 
+		</#if>
+		<#if activeregion?size != 0>
+			<h3>ActiveRegion settings</h3>
+			<p>This tool uses ActiveRegions on the reference.</p>
+			<ul>
+				<li>Minimum region size: <b>${activeregion.min}</b> bp</li>
+				<li>Maximum region size: <b>${activeregion.max}</b> bp</li>
+				<li>Extension increments: <b>${activeregion.ext}</b> bp</li>
+			</ul> 
+		</#if>
+		<#if extradocs?size != 0 || arguments.all?size != 0>
+			<hr>
+			<h2>Command-line Arguments</h2>
+			<p></p>
+		</#if>
+		<#if extradocs?size != 0>
+			<h3>Inherited arguments</h3>
+			<p>The arguments described in the entries below can be supplied to this tool to modify
+			its behavior. For example, the -L argument directs the GATK engine restricts processing
+			to specific genomic intervals (this is an Engine capability and is therefore available to all GATK walkers).</p>
+			<ul>
+				<#list extradocs as extradoc>
+					<li><a href="${extradoc.filename}">${extradoc.name}</a></li>
+				</#list>
+			</ul>
+		</#if>
+   
+		<#-- This class is related to other documented classes via sub/super relationships -->
+			<#if relatedDocs?? && relatedDocs?size != 0>
+				<h3>Related capabilities</h3>
+				<@relatedByType name="Superclasses" type="superclass"/>
+				<@relatedByType name="Subclasses" type="subclass"/>
+			</#if>
+		
+		<#-- Create the argument summary -->
+			<#if arguments.all?size != 0>
+				<h3>${name} specific arguments</h3>
+				<p>This table summarizes the command-line arguments that are specific to this tool. For details, see the list further down below the table.</p>
+				<table class="table table-striped table-bordered table-condensed">
+					<thead>
+					<tr>
+						<th>Name</th>
+						<th>Type</th>
+						<th>Default value</th>
+						<th>Summary</th>
+					</tr>
+					</thead>
+					<tbody>
+					<@argumentlist name="Required" myargs=arguments.required/>
+					<@argumentlist name="Optional" myargs=arguments.optional/>
+					<@argumentlist name="Advanced" myargs=arguments.advanced/>
+					<@argumentlist name="Hidden" myargs=arguments.hidden/>
+					<@argumentlist name="Depreciated" myargs=arguments.depreciated/>
+					</tbody>
+				</table>
+			</#if>
+	
+		<#-- List all of the -->
+				<#if arguments.all?size != 0>
+					<#-- Create the argument details -->
+						<h3>Argument details</h3>
+						<p>Arguments in this list are specific to this tool. Keep in mind that other arguments are available that are shared with other tools (e.g. command-line GATK arguments); see Inherited arguments above.</p>
+						<#list arguments.all as arg>
+							<@argumentDetails arg=arg/>
+						</#list>
+				</#if>
 
-    <#-- Create the argument summary -->
-        <#if arguments.all?size != 0>
-            <hr>
-            <h3>${name} specific arguments</h3>
-            <table class="table table-striped table-bordered table-condensed">
-                <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Type</th>
-                    <th>Default value</th>
-                    <th>Summary</th>
-                </tr>
-                </thead>
-                <tbody>
-                <@argumentlist name="Required" myargs=arguments.required/>
-                <@argumentlist name="Optional" myargs=arguments.optional/>
-                <@argumentlist name="Advanced" myargs=arguments.advanced/>
-                <@argumentlist name="Hidden" myargs=arguments.hidden/>
-                <@argumentlist name="Depreciated" myargs=arguments.depreciated/>
-                </tbody>
-            </table>
-        </#if>
-
-        <#-- Create references to additional capabilities if appropriate -->
-        	<#if readfilters?size != 0>
-        		<hr>
-        		<h3>Read Filters</h3>
-        		<#if readfilters?size = 1>
-        			<p>This Read Filter is automatically applied to the data by the Engine before processing by ${name}.</p>
-        		</#if>
-        		<#if (readfilters?size > 1) >
-        			<p>These Read Filters are automatically applied to the data by the Engine before processing by ${name}.</p>
-        		</#if>
-        		<ul>
-					<#list readfilters as filter>
-						<li><a href="${filter.filename}">${filter.name}</a></li>	
-					</#list>
-        		</ul>
-        	</#if>
-            <#if extradocs?size != 0>
-                <hr>
-                <h2>Additional capabilities</h2>
-                <p>The arguments described in the entries below can be supplied to this tool to modify
-                its behavior. For example, the -L argument directs the GATK engine restricts processing
-                to specific genomic intervals (this is an Engine capability and is therefore available to all GATK walkers).</p>
-                <ul>
-                    <#list extradocs as extradoc>
-                        <li><a href="${extradoc.filename}">${extradoc.name}</a></li>
-                    </#list>
-                </ul>
-            </#if>
-
-            <#-- This class is related to other documented classes via sub/super relationships -->
-                <#if relatedDocs?? && relatedDocs?size != 0>
-                    <hr>
-                    <h2>Related capabilities</h2>
-                    <@relatedByType name="Superclasses" type="superclass"/>
-                    <@relatedByType name="Subclasses" type="subclass"/>
-                </#if>
-
-                <#-- List all of the -->
-                    <#if arguments.all?size != 0>
-                        <hr>
-                        <#-- Create the argument details -->
-                            <h2>Argument details</h2>
-                            <#list arguments.all as arg>
-                                <@argumentDetails arg=arg/>
-                            </#list>
-                    </#if>
-
-                    <@footerInfo />
-                    <@pageFooter />
+			<@footerInfo />
+			<@pageFooter />
