Added function to gatkdocs to specify what VCF field an annotation goes in (INFO or FORMAT)

--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -123,8 +123,13 @@
 			<small>${partitiontype}</small>
 		</h3>
 	</#if>
+	<#if annotfield != "" >
+		<h3>VCF Field
+			<small>${annotfield}</small>
+		</h3>
+	</#if>
 	<#if annotinfo != "" >
-		<h3>Annotation type
+		<h3>Type
 			<small>${annotinfo}</small>
 		</h3>
 	</#if>
