Changed 'depreciated' to the more correct 'deprecated'

--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -239,7 +239,7 @@
 					<@argumentlist name="Optional" myargs=arguments.optional/>
 					<@argumentlist name="Advanced" myargs=arguments.advanced/>
 					<@argumentlist name="Hidden" myargs=arguments.hidden/>
-					<@argumentlist name="Depreciated" myargs=arguments.depreciated/>
+					<@argumentlist name="Deprecated" myargs=arguments.deprecated/>
 					</tbody>
 				</table>
 			</#if>
