More detailed labels for arguments in the gakdocs (requested by David)

--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -235,9 +235,18 @@
 					</tr>
 					</thead>
 					<tbody>
-					<@argumentlist name="Required" myargs=arguments.required/>
-					<@argumentlist name="Optional" myargs=arguments.optional/>
-					<@argumentlist name="Advanced" myargs=arguments.advanced/>
+					<@argumentlist name="Required Inputs" myargs=arguments.required_in/>
+					<@argumentlist name="Required Outputs" myargs=arguments.required_out/>
+					<@argumentlist name="Required Parameters" myargs=arguments.required_param/>
+					<@argumentlist name="Required Flags" myargs=arguments.required_flag/>
+					<@argumentlist name="Optional Inputs" myargs=arguments.optional_in/>
+					<@argumentlist name="Optional Outputs" myargs=arguments.optional_out/>
+					<@argumentlist name="Optional Parameters" myargs=arguments.optional_param/>
+					<@argumentlist name="Optional Flags" myargs=arguments.optional_flag/>
+					<@argumentlist name="Advanced Inputs" myargs=arguments.advanced_in/>
+					<@argumentlist name="Advanced Outputs" myargs=arguments.advanced_out/>
+					<@argumentlist name="Advanced Parameters" myargs=arguments.advanced_param/>
+					<@argumentlist name="Advanced Flags" myargs=arguments.advanced_flag/>
 					<@argumentlist name="Hidden" myargs=arguments.hidden/>
 					<@argumentlist name="Deprecated" myargs=arguments.deprecated/>
 					</tbody>
