Tweaked gatkdocs index template

--- a/settings/helpTemplates/common.html
+++ b/settings/helpTemplates/common.html
@@ -58,7 +58,7 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container-fluid">
-                    <a class="brand" href="index.html">GATK | Technical Documentation</a>
+                    <a class="brand" href="index.html">GATK | Tool Documentation</a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
         <hr>
         <p class="see-also">See also 
         	<a href="${guideIndex}">Guide Index</a> | 
-        	<a href="index.html">Technical Documentation Index</a> | 
+        	<a href="index.html">Tool Documentation Index</a> | 
         	<a href="${forum}">Support Forum</a>
         </p>
 
