--- a/settings/helpTemplates/generic.index.template.html
+++ b/settings/helpTemplates/generic.index.template.html
@@ -53,8 +53,8 @@
     </div>
 </#macro>
 
-<@makeHeader title="Technical Documentation Index" isIndex=true />
-<h1>Technical Documentation Index
+<@makeHeader title="GATK | Tool Documentation Index" isIndex=true />
+<h1>Tool Documentation Index
     <small>${version}</small>
 </h1>
 <div class="accordion" id="index">
