--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -88,7 +88,7 @@
 </#macro>
 
 <?php $group = '${group}'; ?>
-<@makeHeader title="${name} documentation" isIndex=false />
+<@makeHeader title="GATK | ${name} documentation" isIndex=false />
 <section class="span4">
     <aside class="well">
         <h2>Categories</h2>
