--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -31,45 +31,70 @@
         </tr>
         <#list myargs as arg>
             <tr>
-                <td><a href="#${arg.name}">${arg.name}</a></td>
-                <td>${arg.type}</td>
+                <td><a href="#${arg.name}">${arg.name}</a><br />
+                	<#if arg.synonyms??>
+                		<#if arg.name[2..] != arg.synonyms[1..]>
+                			&nbsp;<em>${arg.synonyms}</em>
+                		</#if>
+                	</#if>
+                </td>
+                <!--<td>${arg.type}</td> -->
                 <td>${arg.defaultValue!"NA"}</td>
                 <td>${arg.summary}</td>
             </tr>
-            <#--
-            <
-            td>${arg.required}</td>
-            -->
         </#list>
     </#if>
 </#macro>
 
 <#macro argumentDetails arg>
-    <h3><a name="${arg.name}">${arg.name}
-        <#if arg.synonyms??> / ${arg.synonyms}</#if>
-    </a>
-        (
-        <#if arg.attributes??>${arg.attributes}</#if>
-        ${arg.type}
-        <#if arg.defaultValue??> with default value ${arg.defaultValue}</#if>
-        )
-    </h3>
-    <p class="args">
-        ${arg.summary}. ${arg.fulltext}
-        <#if arg.rodTypes??>${arg.name} binds reference ordered data. This argument supports ROD files of the
-            following types: ${arg.rodTypes}
-        </#if>
-        <#if arg.options??>
-            <br>
-            The ${arg.name} argument is an enumerated type (${arg.type}), which can have one of the following values:
-            <dl class="enum">
-                <#list arg.options as option>
-                    <dt class="enum">${option.name}</dt>
-                    <dd class="enum">${option.summary}</dd>
-                </#list>
-            </dl>
-        </#if>
-    </p>
+	<hr style="border-bottom: dotted 1px #C0C0C0;" />
+	<h3><a name="${arg.name}">${arg.name} </a>
+		<#if arg.synonyms??> / <small>${arg.synonyms}</small></#if>
+	</h3>
+	<p class="args">
+		<b>${arg.summary}</b><br />
+		${arg.fulltext}
+	</p>
+	<!-- Not sure what this can contain apart from "required" and "deprecated" (which args are @hidden) so removing it provisionally -->
+	<!--<#if arg.attributes??>
+		<p>${arg.attributes}</p> 
+	</#if>-->
+	<#if arg.rodTypes??>
+		<p>${arg.name} binds reference ordered data. This argument supports ROD files of the following types: ${arg.rodTypes}</p>
+	</#if>
+	<#if arg.options??>
+		<p>
+		The ${arg.name} argument is an enumerated type (${arg.type}), which can have one of the following values:
+		<dl class="enum">
+			<#list arg.options as option>
+				<dt class="enum">${option.name}</dt>
+				<dd class="enum">${option.summary}</dd>
+			</#list>
+		</dl>
+		</p>
+	</#if>
+	<p><#if arg.required??>
+			<#if arg.required == "yes">
+				<span class="badge badge-important">R</span>
+			</#if>
+		</#if>
+		<span class="label label-info ">${arg.type}</span> 
+		<#if arg.defaultValue??>
+			&nbsp;<span class="label">${arg.defaultValue}</span>
+		</#if>
+		<#if arg.minValue??>
+			&nbsp;<span class="label label-warning">[ [ ${arg.minValue}</span>
+		</#if>
+		<#if arg.minRecValue??>
+			&nbsp;<span class="label label-success">[ ${arg.minRecValue}</span>
+		</#if>
+		<#if arg.maxRecValue??>
+			&nbsp;<span class="label label-success">${arg.maxRecValue} ]</span>
+		</#if>
+		<#if arg.maxValue??>
+			&nbsp;<span class="label label-warning">${arg.maxValue} ] ]</span>
+		</#if>
+	</p>
 </#macro>
 <#macro relatedByType name type>
     <#list relatedDocs as relatedDoc>
@@ -103,11 +128,12 @@
     <h1>${name}</h1>
 
     <p class="lead">${summary}</p>
+    <#-- using goto dev annotation instead, see above footer
     <#if author??>
         <h3>Author
             <small> ${author}</small>
         </h3>
-    </#if>
+    </#if> -->
     <#if group?? >
         <h3>Category
             <small> ${group}</small>
@@ -229,12 +255,12 @@
 		<#-- Create the argument summary -->
 			<#if arguments.all?size != 0>
 				<h3>${name} specific arguments</h3>
-				<p>This table summarizes the command-line arguments that are specific to this tool. For details, see the list further down below the table.</p>
+				<p>This table summarizes the command-line arguments that are specific to this tool. For more details on each argument, see the list further down below the table or click on an argument name to jump directly to that entry in the list.</p>
 				<table class="table table-striped table-bordered table-condensed">
 					<thead>
 					<tr>
-						<th>Name</th>
-						<th>Type</th>
+						<th>Argument name(s)</th>
+						<!--<th>Short name</th> -->
 						<th>Default value</th>
 						<th>Summary</th>
 					</tr>
@@ -267,6 +293,11 @@
 							<@argumentDetails arg=arg/>
 						</#list>
 				</#if>
-
+		
 			<@footerInfo />
+		<#-- Specify go-to developer (for internal use) -->
+			<#if gotoDev??>
+				<small>GTD: ${gotoDev}</small>
+			</#if>
+			<@footerClose />
 			<@pageFooter />
