Various documentation improvements
- Edited intervals merging docs for correctness & clarity
- Edited VQSR arg docs and made mode required (+added -mode SNP to VQSR tests)
- Moved PaperGenotyper to Toy Walkers to declutter the actually useful docs
- Moved GenotypeGVCFs to Variant Discovery category and clarified a few points
- Clarified that the -resource argument depends on using the -V:tag format
- Clarified how the pcr indel model works
- Added caveat for -U ALLOW_N_CIGAR_READS
- Added MathJax support for displaying equations in GATKDocs
- Updated HC example commands and caveats

--- a/settings/helpTemplates/common.html
+++ b/settings/helpTemplates/common.html
@@ -53,6 +53,14 @@
                 }
             </style>
 
+            <!-- MathJax / MathML support for displaying equations -->
+            <script type='text/x-mathjax-config'>
+		        MathJax.Hub.Config({
+  			        TeX: { equationNumbers: { autoNumber: 'AMS' } }
+		        });
+	        </script>
+            <script type='text/javascript' src='http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+
         </head>
         <body>
         <div class="navbar navbar-fixed-top">
