--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -22,6 +22,15 @@
   ~ OTHER DEALINGS IN THE SOFTWARE.
   -->
 
+<?php
+
+    include '../../../include/common.php';
+    $module = modules::GATK;
+    printHeader($module, "GATK | Tool Documentation Index", "Guides");
+?>
+
+<div class='row-fluid' id="top">
+
 <#include "common.html"/>
 
 <#macro argumentlist name myargs>
@@ -113,8 +122,11 @@
 </#macro>
 
 <?php $group = '${group}'; ?>
-<@makeHeader title="GATK | ${name} documentation" isIndex=false />
+
 <section class="span4">
+    <aside class="well">
+        <a href="index"><h4><i class='fa fa-chevron-left'></i> Back to Tool Docs Index</h4></a>
+    </aside>
     <aside class="well">
         <h2>Categories</h2>
         <@getCategories groups=groups />
@@ -300,4 +312,7 @@
 				<small>GTD: ${gotoDev}</small>
 			</#if>
 			<@footerClose />
-			<@pageFooter />
+
+</div>
+
+<?php printFooter($module); ?>
