--- a/settings/helpTemplates/generic.template.html
+++ b/settings/helpTemplates/generic.template.html
@@ -41,7 +41,7 @@
         <#list myargs as arg>
             <tr>
                 <td><a href="#${arg.name}">${arg.name}</a><br />
-                	<#if arg.synonyms??>
+                	<#if arg.synonyms != "NA">
                 		<#if arg.name[2..] != arg.synonyms[1..]>
                 			&nbsp;<em>${arg.synonyms}</em>
                 		</#if>
@@ -68,10 +68,10 @@
 	<!--<#if arg.attributes??>
 		<p>${arg.attributes}</p> 
 	</#if>-->
-	<#if arg.rodTypes??>
+	<#if arg.rodTypes != "NA">
 		<p>${arg.name} binds reference ordered data. This argument supports ROD files of the following types: ${arg.rodTypes}</p>
 	</#if>
-	<#if arg.options??>
+	<#if arg.options?has_content>
 		<p>
 		The ${arg.name} argument is an enumerated type (${arg.type}), which can have one of the following values:
 		<dl class="enum">
@@ -82,25 +82,25 @@
 		</dl>
 		</p>
 	</#if>
-	<p><#if arg.required??>
+	<p><#if arg.required != "NA">
 			<#if arg.required == "yes">
 				<span class="badge badge-important">R</span>
 			</#if>
 		</#if>
 		<span class="label label-info ">${arg.type}</span> 
-		<#if arg.defaultValue??>
+		<#if arg.defaultValue?is_number>
 			&nbsp;<span class="label">${arg.defaultValue}</span>
 		</#if>
-		<#if arg.minValue??>
+		<#if arg.minValue?is_number>
 			&nbsp;<span class="label label-warning">[ [ ${arg.minValue}</span>
 		</#if>
-		<#if arg.minRecValue??>
+		<#if arg.minRecValue?is_number>
 			&nbsp;<span class="label label-success">[ ${arg.minRecValue}</span>
 		</#if>
-		<#if arg.maxRecValue??>
+		<#if arg.maxRecValue?is_number>
 			&nbsp;<span class="label label-success">${arg.maxRecValue} ]</span>
 		</#if>
-		<#if arg.maxValue??>
+		<#if arg.maxValue?is_number>
 			&nbsp;<span class="label label-warning">${arg.maxValue} ] ]</span>
 		</#if>
 	</p>
@@ -171,6 +171,15 @@
 			<small>${annotinfo}</small>
 		</h3>
 	</#if>
+    <#if annotdescript?has_content >
+        <h3>Header info <br />
+            <small>
+                <#list annotdescript as line>
+                <li><pre>${line}</pre></li>
+            </#list>
+            </small>
+        </h3>
+    </#if>
 
 	<hr>
     <h2>Overview</h2>
