Updated gatkdocs template

--- a/settings/helpTemplates/common.html
+++ b/settings/helpTemplates/common.html
@@ -5,9 +5,9 @@
 
         -->
 
-    <#global siteRoot = "http://www.broadinstitute.org/gatk/" />
-    <#global guideIndex = "http://www.broadinstitute.org/gatk/guide/" />
-    <#global forum = "http://gatkforums.broadinstitute.org/" />
+    <#global siteRoot = "https://software.broadinstitute.org/gatk/" />
+    <#global guideIndex = "https://software.broadinstitute.org/gatk/documentation/" />
+    <#global forum = "https://gatkforums.broadinstitute.org/gatk" />
 
     <#macro footerInfo>
         <hr>
