--- a/settings/helpTemplates/generic.index.template.html
+++ b/settings/helpTemplates/generic.index.template.html
@@ -1,9 +1,14 @@
 <?php
 
-    include '../../../common/include/common.php';
-    include_once '../../config.php';
+    define('noTWITTER', TRUE);
+    include '../../../../common/include/common.php';
+    include_once '../../../config.php';
     $module = modules::GATK;
-    printHeader($module, "GATK | Tool Documentation Index", "Guide");
+    printHeader($module, "GATK | Tool Documentation Index", "Documentation");
+
+    $dirs = array_diff(scandir("../", SCANDIR_SORT_DESCENDING), array('..', '.'));
+    $curr_version = file_get_contents(engConst::versions_dir.versionFiles::gatk);
+
 ?>
 
 <div class='row-fluid'>
@@ -43,10 +48,28 @@
     </div>
 </#macro>
 
-<h1 id="top">Tool Documentation Index
-    <small>${version}</small>
-</h1>
-<div class="accordion" id="index">
+    <div class="row-fluid">
+        <div class="span6">
+            <h1 id="top"><i class='<?php print ico::toolDocsIcon; ?>'></i> Tool Documentation Index </h1>
+        </div>
+        <div class="span6">
+            <div class="btn-group pull-right">
+                <a class="btn btn-warning dropdown-toggle" data-toggle="dropdown" href="#">
+                    Version ${version}
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <?php foreach($dirs as $dir) {
+                         print "<li><a tabindex='-1' href='../".$dir."'>".$dir."</a></li>";
+                    } ?>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <h1><small>Showing docs for version ${version} | The current version is <?php print $curr_version; ?></small></h1>
+    <hr />
+
+    <div class="accordion" id="index">
     <#assign seq = ["engine", "tools", "other", "utilities"]>
 	<#list seq as supercat>
 		<br />
